--- a/devops-project/name-spaces/Store/values-mongodb.yaml
+++ b/devops-project/name-spaces/Store/values-mongodb.yaml
@@ -1,6 +1,6 @@
 architecture: replicaset
 auth:
-  namespace: bnr
+  namespace: store
   enabled: true
   rootUser: root
   rootPassword: "password"
