--- a/devops-project/name-spaces/ERP/erp-mongodb-secret.yaml
+++ b/devops-project/name-spaces/ERP/erp-mongodb-secret.yaml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: bnr-secret
+  name: erp-mongodb-secret
+  namespace: erp
 stringData:
   PORT: "5000"
   #MONGO_URI: "mongodb+srv://admin:UH8T9YYp5M9gJ9n3@cluster0.7z3sfhl.mongodb.net/test?retryWrites=true&w=majority"
   JWT_SECRET: "secret"
-  MONGO_URI: "mongodb://root:password@my-mongodb-0.my-mongodb-headless,my-mongodb-1.my-mongodb-headless,my-mongodb-2.my-mongodb-headless:27017"
+  MONGODB_URI: "mongodb://root:password@my-mongodb-0.my-mongodb-headless,my-mongodb-1.my-mongodb-headless,my-mongodb-2.my-mongodb-headless:27017"
